--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-09-07  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/smooth/ftgrays.c (gray_hline): Microptimize.
+
 2016-09-06  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	[smooth] Operate in absolute bitmap coordinates.
