--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,12 @@
 
 2016-09-27  Werner Lemberg  <wl@gnu.org>
 
+	[truetype] Trace number of executed opcodes.
+
+	* src/truetype/ttinterp.c (TT_RunIns): Implement it.
+
+2016-09-27  Werner Lemberg  <wl@gnu.org>
+
 	[truetype] Speed up `TT_Load_Glyph'.
 
 	This avoids additional calls to `tt_face_lookup_table' for the
@@ -20,7 +26,7 @@
 	(TT_FaceRec): ... this structure.
 	* src/truetype/ttgload.c (load_truetype_glyph): Updated.
 	(tt_loader_init): Move initialization of `glyf_offset' to ...
-	* src/truetype/ttpload.c (tt_face_load_loca): .. this function.
+	* src/truetype/ttpload.c (tt_face_load_loca): ... this function.
 
 2016-09-27  Werner Lemberg  <wl@gnu.org>
 
